--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <h1>工业设计 · 创新概念 · <span>3D交互体验</span></h1>
-            <p>我是谢元庆，工业设计师，专注于融合人工智能与创新设计，创造兼具美学与功能性的用户体验解决方案。</p>
+            <p>我是谢原卿，工业设计师，专注于融合人工智能与创新设计，创造兼具美学与功能性的用户体验解决方案。</p>
             <div class="hero-btns">
                 <a href="#portfolio" class="btn btn-primary">查看作品集</a>
                 <a href="#contact" class="btn btn-outline">联系我</a>
