--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
             <!-- 个人照片或特色设计展示 -->
         </div>
         <div class="about-content">
-            <h2>关于谢元庆</h2>
+            <h2>关于谢原卿</h2>
             <p>工业设计师，专注于将技术创新与用户体验完美融合。拥有德国卡塞尔大学工业设计硕士学位和中国四川美术学院工业设计学士学位。</p>
             <p>在Beckhoff Automation担任工业设计师期间，负责产品渲染、动画和工业设计解决方案，专注于自动化技术产品设计。</p>
             <p>我的设计理念是创造既美观又实用的产品，通过人机交互的创新解决实际问题，同时关注可持续性和社会影响。</p>
